--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,45 @@ body {
     margin: 0;
     margin: auto;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+
+header {
+    
+}
+
+nav {
+    height: 80px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.function {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    padding-left: 0px;
+    padding-right: 10px;
+
+}
+
+ul li {
+    font-size: 15px;
+    padding: 12px;
+}
+
+#droplogo {
+    display: block;
+    padding-left: 10px;
+
+}
+
+/* classe button centralizzata per tutta la pagina  */
+
+.button {
+    color: white;
+    background-color: rgb(94, 94, 248);
+    padding: 7px;
 }
