--- a/css/style.css
+++ b/css/style.css
@@ -266,10 +266,17 @@ h1 {
 
 .enter-left {
     flex-basis: 65%;
-    display: flex;
-    flex-direction: column;
+    padding-left: 25px;
+    /* display: flex; */   
 }
 
 .enter-right {
     flex-basis: 30%;
+    padding-top: 20px;
+    margin: auto;
+    text-align: center;
+}
+
+.enter-left h6 {
+    margin: 0;
 }
